Add menubar in context menu when the application menubar is hidden.

--- a/app/qml/resources.qrc
+++ b/app/qml/resources.qrc
@@ -63,6 +63,6 @@
         <file>fonts/1985-ibm-pc-vga/Perfect DOS VGA 437.ttf</file>
         <file>fonts/1985-ibm-pc-vga/dos437.txt</file>
         <file>Storage.qml</file>
+        <file>CRTMainMenuBar.qml</file>
     </qresource>
 </RCC>
-
