--- a/app/qml/resources.qrc
+++ b/app/qml/resources.qrc
@@ -64,5 +64,6 @@
         <file>fonts/1985-ibm-pc-vga/dos437.txt</file>
         <file>Storage.qml</file>
         <file>CRTMainMenuBar.qml</file>
+        <file>SettingsPerformanceTab.qml</file>
     </qresource>
 </RCC>
