Texture quality is actually working. (And also quite useful for high-dpi screens).

--- a/app/qml/resources.qrc
+++ b/app/qml/resources.qrc
@@ -65,5 +65,6 @@
         <file>Storage.qml</file>
         <file>CRTMainMenuBar.qml</file>
         <file>SettingsPerformanceTab.qml</file>
+        <file>TerminalContainer.qml</file>
     </qresource>
 </RCC>
