Finally added new shiny icon.

--- a/app/qml/resources.qrc
+++ b/app/qml/resources.qrc
@@ -66,5 +66,6 @@
         <file>CRTMainMenuBar.qml</file>
         <file>SettingsPerformanceTab.qml</file>
         <file>TerminalContainer.qml</file>
+        <file>images/crt256.png</file>
     </qresource>
 </RCC>
