Refactor: move some out of place functions.

--- a/app/qml/resources.qrc
+++ b/app/qml/resources.qrc
@@ -66,5 +66,6 @@
         <file>SettingsPerformanceTab.qml</file>
         <file>TerminalContainer.qml</file>
         <file>images/crt256.png</file>
+        <file>utils.js</file>
     </qresource>
 </RCC>
