Improve static noise by using pregenerated image instead of the shader we used before.

--- a/app/qml/resources.qrc
+++ b/app/qml/resources.qrc
@@ -67,5 +67,6 @@
         <file>TerminalContainer.qml</file>
         <file>images/crt256.png</file>
         <file>utils.js</file>
+        <file>images/noise512.png</file>
     </qresource>
 </RCC>
