--- a/app/qml/resources.qrc
+++ b/app/qml/resources.qrc
@@ -28,36 +28,14 @@
         <file>main.qml</file>
         <file>SettingsTerminalTab.qml</file>
         <file>FontScanlines.qml</file>
-        <file>fonts/1982-commodore64/C64_Pro_v1.0-STYLE.ttf</file>
-        <file>fonts/1982-commodore64/license.txt</file>
         <file>fonts/1982-commodore64/C64_Pro_Mono_v1.0-STYLE.ttf</file>
-        <file>fonts/1982-commodore64/C64_Elite_Mono_v1.0-STYLE.ttf</file>
-        <file>fonts/1982-commodore64/C64_User_Mono_v1.0-STYLE.ttf</file>
-        <file>fonts/1982-commodore64/C64_User_v1.0-STYLE.ttf</file>
-        <file>fonts/1977-apple2/FreeLicense.txt</file>
-        <file>fonts/1977-apple2/PRNumber3.ttf</file>
         <file>fonts/1977-apple2/PrintChar21.ttf</file>
-        <file>fonts/1971-ibm-3278/README.md</file>
-        <file>fonts/1971-ibm-3278/LICENSE.txt</file>
         <file>fonts/1971-ibm-3278/3270Medium.ttf</file>
         <file>fonts/1985-atari-st/AtariST8x16SystemFont.ttf</file>
-        <file>fonts/modern-terminus/TerminusTTF-Bold-4.38.2.ttf</file>
         <file>fonts/modern-terminus/TerminusTTF-4.38.2.ttf</file>
-        <file>fonts/1977-commodore-pet/FreeLicense.txt</file>
-        <file>fonts/1977-commodore-pet/COMMODORE_PET_128_2y.ttf</file>
         <file>fonts/1977-commodore-pet/COMMODORE_PET.ttf</file>
-        <file>fonts/1977-commodore-pet/COMMODORE_PET_64_2y.ttf</file>
-        <file>fonts/1977-commodore-pet/COMMODORE_PET_2y.ttf</file>
-        <file>fonts/1977-commodore-pet/COMMODORE_PET_64.ttf</file>
-        <file>fonts/1977-commodore-pet/COMMODORE_PET_128.ttf</file>
-        <file>fonts/1977-commodore-pet/COMMODORE_PET_2x.ttf</file>
-        <file>fonts/1979-atari-400-800/ReadMe.rtf</file>
         <file>fonts/1979-atari-400-800/ATARI400800_original.TTF</file>
-        <file>fonts/1979-atari-400-800/ATARI400800_squared.TTF</file>
-        <file>fonts/1979-atari-400-800/ATARI400800_rounded.TTF</file>
         <file>fonts/1985-ibm-pc-vga/Perfect DOS VGA 437 Win.ttf</file>
-        <file>fonts/1985-ibm-pc-vga/Perfect DOS VGA 437.ttf</file>
-        <file>fonts/1985-ibm-pc-vga/dos437.txt</file>
         <file>Storage.qml</file>
         <file>CRTMainMenuBar.qml</file>
         <file>SettingsPerformanceTab.qml</file>
@@ -65,5 +43,11 @@
         <file>images/crt256.png</file>
         <file>utils.js</file>
         <file>images/allNoise512.png</file>
+        <file>fonts/modern-proggy-tiny/ProggyTiny.ttf</file>
+        <file>fonts/modern-pro-font-win-tweaked/ProFontWindows.ttf</file>
+        <file>fonts/modern-monaco/monaco.ttf</file>
+        <file>fonts/modern-hermit/Hermit-medium.otf</file>
+        <file>fonts/modern-envy-code-r/Envy Code R.ttf</file>
+        <file>fonts/modern-inconsolata/Inconsolata.otf</file>
     </qresource>
 </RCC>
