Improve profiles management, redesign a bit the settings window.

--- a/app/qml/resources.qrc
+++ b/app/qml/resources.qrc
@@ -49,5 +49,6 @@
         <file>fonts/modern-hermit/Hermit-medium.otf</file>
         <file>fonts/modern-envy-code-r/Envy Code R.ttf</file>
         <file>fonts/modern-inconsolata/Inconsolata.otf</file>
+        <file>SettingsScreenTab.qml</file>
     </qresource>
 </RCC>
