Add Fixedsys Excelsior font.

--- a/app/qml/resources.qrc
+++ b/app/qml/resources.qrc
@@ -50,5 +50,6 @@
         <file>fonts/modern-envy-code-r/Envy Code R.ttf</file>
         <file>fonts/modern-inconsolata/Inconsolata.otf</file>
         <file>SettingsScreenTab.qml</file>
+        <file>fonts/modern-fixedsys-excelsior/FSEX301-L2.ttf</file>
     </qresource>
 </RCC>
