--- a/app/qml/resources.qrc
+++ b/app/qml/resources.qrc
@@ -51,5 +51,6 @@
         <file>fonts/modern-inconsolata/Inconsolata.otf</file>
         <file>SettingsScreenTab.qml</file>
         <file>fonts/modern-fixedsys-excelsior/FSEX301-L2.ttf</file>
+        <file>../icons/32x32/cool-retro-term.png</file>
     </qresource>
 </RCC>
