Add Knight TV font.  As used by the MIT AI Lab.

--- a/app/qml/resources.qrc
+++ b/app/qml/resources.qrc
@@ -31,6 +31,7 @@
         <file>fonts/1982-commodore64/C64_Pro_Mono_v1.0-STYLE.ttf</file>
         <file>fonts/1977-apple2/PrintChar21.ttf</file>
         <file>fonts/1971-ibm-3278/3270Medium.ttf</file>
+        <file>fonts/1975-knight-tv/KnightTVMedium.ttf</file>
         <file>fonts/1985-atari-st/AtariST8x16SystemFont.ttf</file>
         <file>fonts/modern-terminus/TerminusTTF-4.38.2.ttf</file>
         <file>fonts/1977-commodore-pet/COMMODORE_PET.ttf</file>
