First implementation of imageless frame.

--- a/app/qml/resources.qrc
+++ b/app/qml/resources.qrc
@@ -1,14 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>frames/BlackRoughFrame.qml</file>
-        <file>frames/images/black-frame.png</file>
-        <file>frames/images/screen-frame-normals.png</file>
-        <file>frames/images/black-frame-normals.png</file>
-        <file>frames/images/screen-frame.png</file>
-        <file>frames/images/black-frame-original.png</file>
-        <file>frames/images/screen-frame-original.png</file>
-        <file>frames/WhiteSimpleFrame.qml</file>
-        <file>frames/utils/TerminalFrame.qml</file>
         <file>SizeOverlay.qml</file>
         <file>ShaderTerminal.qml</file>
         <file>CheckableSlider.qml</file>
@@ -52,5 +43,6 @@
         <file>fonts/1977-commodore-pet/PetMe.ttf</file>
         <file>BurnInEffect.qml</file>
         <file>fonts/modern-terminus/TerminusTTF-4.46.0.ttf</file>
+        <file>NewTerminalFrame.qml</file>
     </qresource>
 </RCC>
