Improve terminal frame and expose frame size setting.

--- a/app/qml/resources.qrc
+++ b/app/qml/resources.qrc
@@ -40,7 +40,7 @@
         <file>fonts/1977-commodore-pet/PetMe.ttf</file>
         <file>BurnInEffect.qml</file>
         <file>fonts/modern-terminus/TerminusTTF-4.46.0.ttf</file>
-        <file>NewTerminalFrame.qml</file>
+        <file>TerminalFrame.qml</file>
         <file>SlowBurnIn.qml</file>
         <file>menus/WindowMenu.qml</file>
         <file>menus/FullContextMenu.qml</file>
