--- a/app/qml/resources.qrc
+++ b/app/qml/resources.qrc
@@ -16,28 +16,28 @@
         <file>SettingsEffectsTab.qml</file>
         <file>main.qml</file>
         <file>SettingsTerminalTab.qml</file>
-        <file>fonts/1977-apple2/PrintChar21.ttf</file>
-        <file>fonts/1971-ibm-3278/3270-Regular.ttf</file>
+        <file>fonts/apple2/PrintChar21.ttf</file>
+        <file>fonts/ibm-3278/3270-Regular.ttf</file>
         <file>Storage.qml</file>
         <file>SettingsAdvancedTab.qml</file>
         <file>TerminalContainer.qml</file>
         <file>images/crt256.png</file>
         <file>utils.js</file>
         <file>images/allNoise512.png</file>
-        <file>fonts/modern-proggy-tiny/ProggyTiny.ttf</file>
-        <file>fonts/modern-pro-font-win-tweaked/ProFontWindows.ttf</file>
-        <file>fonts/modern-hermit/Hermit-medium.otf</file>
-        <file>fonts/modern-inconsolata/Inconsolata.otf</file>
-        <file>fonts/modern-fixedsys-excelsior/FSEX301-L2.ttf</file>
+        <file>fonts/fixedsys-excelsior/FSEX301-L2.ttf</file>
+        <file>fonts/cozette/CozetteVector.ttf</file>
+        <file>fonts/greybeard/Greybeard-16px.ttf</file>
+        <file>fonts/hack/Hack-Regular.ttf</file>
+        <file>fonts/fira-code/FiraCode-Medium.ttf</file>
+        <file>fonts/iosevka/IosevkaTerm-ExtendedMedium.ttf</file>
+        <file>fonts/jetbrains-mono/JetBrainsMono-Medium.ttf</file>
         <file>../icons/32x32/cool-retro-term.png</file>
         <file>Components/SizedLabel.qml</file>
-        <file>fonts/1979-atari-400-800/AtariClassic-Regular.ttf</file>
-        <file>fonts/1982-commodore64/C64_Pro_Mono-STYLE.ttf</file>
-        <file>fonts/1981-ibm-pc/PxPlus_IBM_BIOS.ttf</file>
-        <file>fonts/1985-ibm-pc-vga/PxPlus_IBM_VGA8.ttf</file>
-        <file>fonts/1977-commodore-pet/PetMe.ttf</file>
+        <file>fonts/atari-400-800/AtariClassic-Regular.ttf</file>
+        <file>fonts/pet-me/PetMe64.ttf</file>
+        <file>fonts/pet-me/PetMe.ttf</file>
         <file>BurnInEffect.qml</file>
-        <file>fonts/modern-terminus/TerminusTTF-4.46.0.ttf</file>
+        <file>fonts/terminus/TerminusTTF-4.49.3.ttf</file>
         <file>TerminalFrame.qml</file>
         <file>menus/WindowMenu.qml</file>
         <file>menus/FullContextMenu.qml</file>
@@ -50,5 +50,11 @@
         <file>../shaders/terminal_static.frag.qsb</file>
         <file>../shaders/terminal_frame.frag.qsb</file>
         <file>../shaders/burn_in.frag.qsb</file>
+        <file>fonts/unscii/unscii-8-thin.ttf</file>
+        <file>fonts/unscii/unscii-16-full.ttf</file>
+        <file>fonts/unscii/unscii-8.ttf</file>
+        <file>fonts/oldschool-pc-fonts/PxPlus_IBM_EGA_8x8.ttf</file>
+        <file>fonts/oldschool-pc-fonts/PxPlus_IBM_VGA8.ttf</file>
+        <file>fonts/oldschool-pc-fonts/PxPlus_IBM_VGA_8x16.ttf</file>
     </qresource>
 </RCC>
