--- a/app/qml/resources.qrc
+++ b/app/qml/resources.qrc
@@ -21,6 +21,7 @@
         <file>Storage.qml</file>
         <file>SettingsAdvancedTab.qml</file>
         <file>TerminalContainer.qml</file>
+        <file>TerminalTabs.qml</file>
         <file>images/crt256.png</file>
         <file>utils.js</file>
         <file>images/allNoise512.png</file>
@@ -42,7 +43,6 @@
         <file>menus/WindowMenu.qml</file>
         <file>menus/FullContextMenu.qml</file>
         <file>menus/ShortContextMenu.qml</file>
-        <file>ShaderLibrary.qml</file>
         <file>menus/OSXMenu.qml</file>
         <file>../shaders/terminal_dynamic.vert.qsb</file>
         <file>../shaders/terminal_static.vert.qsb</file>
