--- a/app/qml/resources.qrc
+++ b/app/qml/resources.qrc
@@ -17,7 +17,7 @@
         <file>main.qml</file>
         <file>SettingsTerminalTab.qml</file>
         <file>fonts/apple2/PrintChar21.ttf</file>
-        <file>fonts/ibm-3278/3270-Regular.ttf</file>
+        <file>fonts/ibm-3278/3270NerdFontMono-Regular.ttf</file>
         <file>Storage.qml</file>
         <file>SettingsAdvancedTab.qml</file>
         <file>TerminalContainer.qml</file>
@@ -28,11 +28,12 @@
         <file>fonts/fixedsys-excelsior/FSEX301-L2.ttf</file>
         <file>fonts/cozette/CozetteVector.ttf</file>
         <file>fonts/greybeard/Greybeard-16px.ttf</file>
-        <file>fonts/hack/Hack-Regular.ttf</file>
-        <file>fonts/fira-code/FiraCode-Medium.ttf</file>
+        <file>fonts/gohu/GohuFont11NerdFontMono-Regular.ttf</file>
+        <file>fonts/hack/HackNerdFontMono-Regular.ttf</file>
+        <file>fonts/fira-code/FiraCodeNerdFontMono-Regular.ttf</file>
         <file>fonts/bigblue-terminal/BigBlueTerm437NerdFontMono-Regular.ttf</file>
-        <file>fonts/iosevka/IosevkaTerm-ExtendedMedium.ttf</file>
-        <file>fonts/jetbrains-mono/JetBrainsMono-Medium.ttf</file>
+        <file>fonts/iosevka/IosevkaTermNerdFontMono-Regular.ttf</file>
+        <file>fonts/jetbrains-mono/JetBrainsMonoNerdFontMono-Regular.ttf</file>
         <file>../icons/32x32/cool-retro-term.png</file>
         <file>Components/SizedLabel.qml</file>
         <file>fonts/atari-400-800/AtariClassic-Regular.ttf</file>
@@ -40,6 +41,9 @@
         <file>fonts/pet-me/PetMe.ttf</file>
         <file>BurnInEffect.qml</file>
         <file>fonts/terminus/TerminessNerdFontMono-Regular.ttf</file>
+        <file>fonts/departure-mono/DepartureMonoNerdFontMono-Regular.otf</file>
+        <file>fonts/opendyslexic/OpenDyslexicMNerdFontMono-Regular.otf</file>
+        <file>fonts/source-code-pro/SauceCodeProNerdFontMono-Regular.ttf</file>
         <file>TerminalFrame.qml</file>
         <file>menus/WindowMenu.qml</file>
         <file>menus/FullContextMenu.qml</file>
